# drf-typescript-generator

./: CHANGELOG.md  pyproject.toml
drf_typescript_generator/: globals.py  utils.py
drf_typescript_generator/management/commands/: generate_types.py
tests/: utils.py
