[tool.poetry]
name = "drf-typescript-generator"
version = "0.2.0"
description = "Package for generating TypeScript types from DRF serializers"
authors = ["napmn <lukass135@gmail.com>", "Dmitry Vakhnenko <dima@dima-v.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/remastr/drf-typescript-generator"
keywords = ["django", "drf"]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
]

[tool.poetry.dependencies]
python = "^3.11"
Django = ">=4.1"
djangorestframework = ">=3.14"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
black = "^22.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
